--- a/index.html
+++ b/index.html
@@ -15,68 +15,117 @@
 
   <title>Frontend Mentor | Recipe page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
 </head>
 
 <body>
 
-  Simple Omelette Recipe
+  <main> <!-- Main Recipe card container/ main background -->
+    <div class="recipe-container"> <!--Main content container-->
+      <section class="recipe-intro">
+        <div class="recipe-image"> <!--Main Image-->
+          <img src="/assets/images/image-omelette.jpeg" alt="photo of an omelette on a plate">
+        </div> <!-- END Main Image-->
+        <!-- recipe-info -->
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        <h1 class="recipe-intro__title">Simple Omelette Recipe</h1>
 
-  Preparation time
+        <p class="recipe-description">An easy and quick dish, perfect for any meal. This classic omelette combines
+          beaten
+          eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        </p>
+        <!-- Prep Time -->
+        <div class="recipe__prep-time">
+          <h3 class="recipe__prep-time">Preparation time</h3>
+          <ul class="recipe__prep-list">
+            <li class="recipe__prep-item"><strong>Total</strong>: Approximately 10 minutes</li>
+            <li class="recipe__prep-item"><strong>Preparation</strong>: 5 minutes</li>
+            <li class="recipe__prep-item"><strong>Cooking</strong>: 5 minutes</li>
+          </ul>
+        </div>
+        <!-- END Prep Time -->
+        <!-- Ingredients -->
+        <h3 class="recipe__ingredients-title">Ingredients</h3>
+        <ul class="recipe__ingredients-list">
+          <li class="recipe__ingredients-item">2-3 large eggs</li>
+          <li class="recipe__ingredients-item">Salt, to taste</li>
+          <li class="recipe__ingredients-item">Pepper, to taste</li>
+          <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
+          <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+      </section>
+      <!-- END Ingredients -->
+      <!-- Instructions -->
+      <section class="recipe-instructions">
+        <h3 class="recipe__instructions-title">Instructions</h3>
+        <ol class="recipe__instructions-list">
+          <li class="recipe__instructions-item">
+            <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper
+            until they are well mixed.
+            You can add a tablespoon of water or milk for a fluffier texture.
+          </li>
+          <li class="recipe__instructions-item">
+            <strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.
+          </li>
+          <li class="recipe__ingredients-item">
+            <strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+            to ensure
+            the eggs evenly coat the surface.
+          </li>
+          <li class="recipe__instructions-item">
+            <strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly
+            runny in the
+            middle, sprinkle your chosen fillings over one half of the omelette.
+          </li>
+          <li class="recipe__instructions-item">
+            <strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it
+            over
+            the
+            fillings. Let it cook for another minute, then slide it onto a plate.
+          </li>
+          <li class="recipe__instructions-item">
+            <strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.
+          </li>
+        </ol>
+      </section>
+      <!--END Instructions -->
+      <section class="recipe-nutrition">
+        <!-- Nutrition Table-->
+        <h3 class="recipe__nutrition-title">Nutrition</h3>
+        <table class="recipe__nutrition-table">
+          <p class="recipe__nutrition-table-info">
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <tr>
+            <th>Calories</th>
+            <td>277kcal</td>
+          </tr>
+          <tr>
+            <th>Carbs</th>
+            <td>0g</td>
+          </tr>
+          <tr>
+            <th>Protein</th>
+            <td>20g</td>
+          </tr>
+          <tr>
+            <th>Fat</th>
+            <td>22g</td>
+          </tr>
+        </table>
+        <!-- END Nutrition Table-->
+      </section>
+    </div> <!-- END Main content container-->
 
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </main> <!-- END Main Recipe card container/ main background -->
+  <!-- <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Markus Harrison</a>.
+    </div>
+  </footer> -->
 </body>
 
 </html>
