first section done

--- a/index.html
+++ b/index.html
@@ -36,23 +36,26 @@
         </p>
         <!-- Prep Time -->
         <div class="recipe__prep-time">
-          <h3 class="recipe__prep-time">Preparation time</h3>
+          <h3 class="recipe__prep-time-title">Preparation time</h3>
           <ul class="recipe__prep-list">
-            <li class="recipe__prep-item"><strong>Total</strong>: Approximately 10 minutes</li>
-            <li class="recipe__prep-item"><strong>Preparation</strong>: 5 minutes</li>
-            <li class="recipe__prep-item"><strong>Cooking</strong>: 5 minutes</li>
+            <li class="recipe__prep-item"><strong>Total:</strong> Approximately 10 minutes</li>
+            <li class="recipe__prep-item"><strong>Preparation:</strong> 5 minutes</li>
+            <li class="recipe__prep-item"><strong>Cooking:</strong> 5 minutes</li>
           </ul>
         </div>
         <!-- END Prep Time -->
         <!-- Ingredients -->
-        <h3 class="recipe__ingredients-title">Ingredients</h3>
-        <ul class="recipe__ingredients-list">
-          <li class="recipe__ingredients-item">2-3 large eggs</li>
-          <li class="recipe__ingredients-item">Salt, to taste</li>
-          <li class="recipe__ingredients-item">Pepper, to taste</li>
-          <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
-          <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-        </ul>
+        <div class="ingredients">
+          <h3 class="recipe__ingredients-title">Ingredients</h3>
+          <ul class="recipe__ingredients-list">
+            <li class="recipe__ingredients-item">2-3 large eggs</li>
+            <li class="recipe__ingredients-item">Salt, to taste</li>
+            <li class="recipe__ingredients-item">Pepper, to taste</li>
+            <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
+            <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+          </ul>
+        </div>
+
 
       </section>
       <!-- END Ingredients -->
