ingredients, prep, done

--- a/index.html
+++ b/index.html
@@ -21,46 +21,45 @@
 <body>
 
   <main> <!-- Main Recipe card container/ main background -->
-    <div class="recipe-container"> <!--Main content container-->
-      <section class="recipe-intro">
-        <div class="recipe-image"> <!--Main Image-->
-          <img src="/assets/images/image-omelette.jpeg" alt="photo of an omelette on a plate">
-        </div> <!-- END Main Image-->
-        <!-- recipe-info -->
+    <!--Main Image-->
+    <div class="recipe-image">
+      <img src="/assets/images/image-omelette.jpeg" alt="photo of an omelette on a plate">
+    </div>
+    <!-- END Main Image-->
+    <!--Main content container-->
+    <div class="recipe-container">
+      <!-- recipe-info -->
 
-        <h1 class="recipe-intro__title">Simple Omelette Recipe</h1>
+      <h1 class="recipe-intro__title">Simple Omelette Recipe</h1>
 
-        <p class="recipe-description">An easy and quick dish, perfect for any meal. This classic omelette combines
-          beaten
-          eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-        </p>
-        <!-- Prep Time -->
-        <div class="recipe__prep-time">
-          <h3 class="recipe__prep-time-title">Preparation time</h3>
-          <ul class="recipe__prep-list">
-            <li class="recipe__prep-item"><strong>Total:</strong> Approximately 10 minutes</li>
-            <li class="recipe__prep-item"><strong>Preparation:</strong> 5 minutes</li>
-            <li class="recipe__prep-item"><strong>Cooking:</strong> 5 minutes</li>
-          </ul>
-        </div>
-        <!-- END Prep Time -->
-        <!-- Ingredients -->
-        <div class="ingredients">
-          <h3 class="recipe__ingredients-title">Ingredients</h3>
-          <ul class="recipe__ingredients-list">
-            <li class="recipe__ingredients-item">2-3 large eggs</li>
-            <li class="recipe__ingredients-item">Salt, to taste</li>
-            <li class="recipe__ingredients-item">Pepper, to taste</li>
-            <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
-            <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-          </ul>
-        </div>
-
-
-      </section>
+      <p class="recipe-description">An easy and quick dish, perfect for any meal. This classic omelette combines
+        beaten
+        eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      </p>
+      <!-- Prep Time -->
+      <div class="recipe__prep-time">
+        <h3 class="recipe__prep-time-title">Preparation time</h3>
+        <ul class="recipe__prep-list">
+          <li class="recipe__prep-item"><strong>Total:</strong> Approximately 10 minutes</li>
+          <li class="recipe__prep-item"><strong>Preparation:</strong> 5 minutes</li>
+          <li class="recipe__prep-item"><strong>Cooking:</strong> 5 minutes</li>
+        </ul>
+      </div>
+      <!-- END Prep Time -->
+      <!-- Ingredients -->
+      <div class="ingredients">
+        <h3 class="recipe__ingredients-title">Ingredients</h3>
+        <ul class="recipe__ingredients-list">
+          <li class="recipe__ingredients-item">2-3 large eggs</li>
+          <li class="recipe__ingredients-item">Salt, to taste</li>
+          <li class="recipe__ingredients-item">Pepper, to taste</li>
+          <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
+          <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
+      </div>
       <!-- END Ingredients -->
       <!-- Instructions -->
-      <section class="recipe-instructions">
+      <div class="recipe-instructions">
         <h3 class="recipe__instructions-title">Instructions</h3>
         <ol class="recipe__instructions-list">
           <li class="recipe__instructions-item">
@@ -71,7 +70,7 @@
           <li class="recipe__instructions-item">
             <strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.
           </li>
-          <li class="recipe__ingredients-item">
+          <li class="recipe__instructions-item">
             <strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
             to ensure
             the eggs evenly coat the surface.
@@ -91,9 +90,9 @@
             <strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.
           </li>
         </ol>
-      </section>
+      </div>
       <!--END Instructions -->
-      <section class="recipe-nutrition">
+      <div class="recipe-nutrition">
         <!-- Nutrition Table-->
         <h3 class="recipe__nutrition-title">Nutrition</h3>
         <table class="recipe__nutrition-table">
@@ -118,10 +117,10 @@
             <td>22g</td>
           </tr>
         </table>
-        <!-- END Nutrition Table-->
-      </section>
-    </div> <!-- END Main content container-->
-
+      </div>
+      <!-- END Nutrition Table-->
+    </div>
+    <!-- END Main content container-->
   </main> <!-- END Main Recipe card container/ main background -->
   <!-- <footer>
     <div class="attribution">
