--- a/index.html
+++ b/index.html
@@ -21,104 +21,107 @@
 <body>
 
   <main> <!-- Main Recipe card container/ main background -->
-    <!--Main Image-->
-    <div class="recipe-image">
-      <img src="/assets/images/image-omelette.jpeg" alt="photo of an omelette on a plate">
-    </div>
-    <!-- END Main Image-->
     <!--Main content container-->
     <div class="recipe-container">
+      <!--Main Image-->
+      <div class="recipe-image">
+        <img src="/assets/images/image-omelette.jpeg" alt="photo of an omelette on a plate">
+      </div>
+      <!-- END Main Image-->
+
       <!-- recipe-info -->
+      <div class="recipe">
+        <h1 class="recipe-intro__title">Simple Omelette Recipe</h1>
 
-      <h1 class="recipe-intro__title">Simple Omelette Recipe</h1>
-
-      <p class="recipe-description">An easy and quick dish, perfect for any meal. This classic omelette combines
-        beaten
-        eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-      </p>
-      <!-- Prep Time -->
-      <div class="recipe__prep-time">
-        <h3 class="recipe__prep-time-title">Preparation time</h3>
-        <ul class="recipe__prep-list">
-          <li class="recipe__prep-item"><strong>Total:</strong> Approximately 10 minutes</li>
-          <li class="recipe__prep-item"><strong>Preparation:</strong> 5 minutes</li>
-          <li class="recipe__prep-item"><strong>Cooking:</strong> 5 minutes</li>
-        </ul>
-      </div>
-      <!-- END Prep Time -->
-      <!-- Ingredients -->
-      <div class="ingredients">
-        <h3 class="recipe__ingredients-title">Ingredients</h3>
-        <ul class="recipe__ingredients-list">
-          <li class="recipe__ingredients-item">2-3 large eggs</li>
-          <li class="recipe__ingredients-item">Salt, to taste</li>
-          <li class="recipe__ingredients-item">Pepper, to taste</li>
-          <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
-          <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-        </ul>
-      </div>
-      <!-- END Ingredients -->
-      <!-- Instructions -->
-      <div class="recipe-instructions">
-        <h3 class="recipe__instructions-title">Instructions</h3>
-        <ol class="recipe__instructions-list">
-          <li class="recipe__instructions-item">
-            <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper
-            until they are well mixed.
-            You can add a tablespoon of water or milk for a fluffier texture.
-          </li>
-          <li class="recipe__instructions-item">
-            <strong>Heat the pan</strong>: Place a non-stick frying pan over medium heat and add butter or oil.
-          </li>
-          <li class="recipe__instructions-item">
-            <strong>Cook the omelette</strong>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
-            to ensure
-            the eggs evenly coat the surface.
-          </li>
-          <li class="recipe__instructions-item">
-            <strong>Add fillings (optional)</strong>: When the eggs begin to set at the edges but are still slightly
-            runny in the
-            middle, sprinkle your chosen fillings over one half of the omelette.
-          </li>
-          <li class="recipe__instructions-item">
-            <strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it
-            over
-            the
-            fillings. Let it cook for another minute, then slide it onto a plate.
-          </li>
-          <li class="recipe__instructions-item">
-            <strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.
-          </li>
-        </ol>
-      </div>
-      <!--END Instructions -->
-      <div class="recipe-nutrition">
-        <!-- Nutrition Table-->
-        <h3 class="recipe__nutrition-title">Nutrition</h3>
-        <table class="recipe__nutrition-table">
+        <p class="recipe-desc">An easy and quick dish, perfect for any meal. This classic omelette combines
+          beaten
+          eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        </p>
+        <!-- Prep Time -->
+        <div class="recipe__prep-time">
+          <h3 class="recipe__prep-time-title">Preparation time</h3>
+          <ul class="recipe__prep-list">
+            <li class="recipe__prep-item"><span>Total:</span> Approximately 10 minutes</li>
+            <li class="recipe__prep-item"><span>Preparation:</span> 5 minutes</li>
+            <li class="recipe__prep-item"><span>Cooking:</span> 5 minutes</li>
+          </ul>
+        </div>
+        <!-- END Prep Time -->
+        <!-- Ingredients -->
+        <section class="ingredients">
+          <h2 class="recipe__ingredients-title">Ingredients</h2>
+          <ul class="recipe__ingredients-list">
+            <li class="recipe__ingredients-item">2-3 large eggs</li>
+            <li class="recipe__ingredients-item">Salt, to taste</li>
+            <li class="recipe__ingredients-item">Pepper, to taste</li>
+            <li class="recipe__ingredients-item">1 tablespoon of butter or oil</li>
+            <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+          </ul>
+        </section>
+        <!-- END Ingredients -->
+        <!-- Instructions -->
+        <section class="recipe-instructions">
+          <h3 class="recipe__instructions-title">Instructions</h3>
+          <ol class="recipe__instructions-list">
+            <li class="recipe__instructions-item">
+              <span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper
+              until they are well mixed.
+              You can add a tablespoon of water or milk for a fluffier texture.
+            </li>
+            <li class="recipe__instructions-item">
+              <span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.
+            </li>
+            <li class="recipe__instructions-item">
+              <span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+              to ensure
+              the eggs evenly coat the surface.
+            </li>
+            <li class="recipe__instructions-item">
+              <span>Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly
+              runny in the
+              middle, sprinkle your chosen fillings over one half of the omelette.
+            </li>
+            <li class="recipe__instructions-item">
+              <span>Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it
+              over
+              the
+              fillings. Let it cook for another minute, then slide it onto a plate.
+            </li>
+            <li class="recipe__instructions-item">
+              <span>Enjoy:</span> Serve hot, with additional salt and pepper if needed.
+            </li>
+          </ol>
+        </section>
+        <!--END Instructions -->
+        <section class="recipe-nutrition">
+          <!-- Nutrition Table-->
+          <h4 class="recipe__nutrition-title">Nutrition</h4>
           <p class="recipe__nutrition-table-info">
             The table below shows nutritional values per serving without the
             additional fillings.
           </p>
-          <tr>
-            <th>Calories</th>
-            <td>277kcal</td>
-          </tr>
-          <tr>
-            <th>Carbs</th>
-            <td>0g</td>
-          </tr>
-          <tr>
-            <th>Protein</th>
-            <td>20g</td>
-          </tr>
-          <tr>
-            <th>Fat</th>
-            <td>22g</td>
-          </tr>
-        </table>
+          <table class="recipe__nutrition-table">
+
+            <tr>
+              <td>Calories</td>
+              <td>277kcal</td>
+            </tr>
+            <tr>
+              <td>Carbs</td>
+              <td>0g</td>
+            </tr>
+            <tr>
+              <td>Protein</td>
+              <td>20g</td>
+            </tr>
+            <tr>
+              <td>Fat</td>
+              <td>22g</td>
+            </tr>
+          </table>
+        </section>
+        <!-- END Nutrition Table-->
       </div>
-      <!-- END Nutrition Table-->
     </div>
     <!-- END Main content container-->
   </main> <!-- END Main Recipe card container/ main background -->
